--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	</head>
 
 	<body>
+		
+		<div id="panel"></div>
 		<div id="mapid"></div>
 		<div id="mydiv"></div>
 		<!--put your initial page content here-->
