Added text and EXTREMELY minimal styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
 		<title>World Biodiversity Atlas</title>
+		<h1>World Biodiversity Atlas</h1>
 
 		<!--put your external stylesheet links here-->
 		<link rel="stylesheet" href="lib/leaflet.css">
@@ -18,7 +19,29 @@
 		<div id="panel"></div>
 		<div id="mapid"></div>
 		<div id="mydiv"></div>
-		<div id="mapinfo"></div>
+		<div id="mapinfo">
+			<div id='amphibians'>
+			<h2>Amphibians</h2>
+			<p>Amphibians are ectothermic, or cold blooded, which means they regulate their body temperature behaviorally via the outside world. Amphibians are typically four-limbed vertebrates. They have smooth, unscaly, permeable skin that helps them absorb oxygen. Some amphibians even produce toxins using their skin glands to deter predators. Modern Amphibians are generally grouped as Caecilian (limbless amphibians), Caudata (salamanders) and, and Anura (frogs). As you can see from the map, amphibians as a whole occupy a large amount of the earth. Most amphibians live in or around aquatic ecosystems, as water is crucial to their reproduction. Most amphibians begin life in the water, and experience metamorphosis to move from an adolescent with gills to an adult that breathes air. Due to their close relationship with water, amphibians are typically good environmental indicators.</p>
+			</div>
+				<div id='subamphibians'>
+				<h3>Caecilian</h3>
+				<p>These amphibians are unlike others in that they are limbless. You probably have not encountered these, as they live underground and are not commonly seen. They can be as small as earthworms and can grow as large as 5 feet long. As you can see from the map they are mostly located in South and Central America. Their diet consists of earthworms and other small creatures that live underground. Like frogs, caecilians skin secretes chemicals to deter predators. They are adapted for burrowing, but some species also can swim (similarly to eels) in bodies of water. Caecilians are less affected by climate change than some of the other species of amphibian; however, those who live in regions where deforestation or massive landscape changes are taking place are feeling the effects of losing large portions of their habitat. This is especially concerning because some caecilians are specific to very small regions and therefore are extremely vulnerable to habitat loss.</p>
+				<h3>Anura</h3>
+				<p>Anura, more commonly referred to as frogs, are members of a group of short bodied amphibians that, in their adult form, lack a tail. As you can see from the map, frogs are widely distributed, but most species are located in tropical rainforests, such as the Amazon Rainforest. Due to their life cycle largely involving water, most species live in moist areas, but a few species have adapted to dry habitats. Frogs are extremely diverse, and make up more than 85% of living amphibians. Frogs normally lay their eggs in water, which then hatch into tadpoles and eventually metamorphize into adults. Adult frogs are typically carnivorous and eat small invertebrates, but some species are omnivorous. We generally call warty frogs toads, but this is based solely on informal naming, and many toads are very closely related to frogs. More than one third of frog species are considered to be threatened and over 120 species have become extinct since the 1980s. Frogs have had increasing malformations, and a fungal disease called chytridiomycosis has spread around the world - even frogs in quarantine are being afflicted by the fungus.</p>
+				<h3>Caudata</h3>
+				<p>Caudata are known more commonly as salamanders. They have slender bodies and short legs. Unlike other amphibians, salamanders have a tail in both their adolescent and adult forms. As you can see on the map, they are mostly found in the Northern Hemisphere. Like many other amphibians, salamanders. Although most salamanders are small, two species can reach up to 5 feet in length. They are also nocturnal. They live in or around water – only a few species are completely terrestrial in adulthood. Salamanders can regenerate lost limbs within a few weeks, which allows them greater survivability of predator attacks. Due to the chytrid fungus that afflicts amphibians and destruction of wetland habitats, populations have dramatically decreased over the last few years.</p>
+				<h3>Threatened Amphibians</h3>
+				<p>Although we are constantly discovering new amphibians, in the past 50 years we have been experiencing a rapid decline in amphibians, and scientists are not entirely sure why. Scientists have numerous ideas – acid rain, thinning ozone layer increasing UV radiation, toxic compounds in the air being absorbed via amphibians’ skins, and toxic fungus – but we still cannot be sure exactly what is happening, other than that many of these ideas result from human-caused climate change.</p>
+				</div>
+			<div id='birds'>
+			<h2>Birds</h2>
+			<p>Birds are endothermic (warm-blooded) vertebrates whose defining characteristics are the presence of feathers and wings. Feathers are used as a barrier against the water, provide insulation from cold, provide a flat surface to push against the air during flight, and are used, especially by brightly colored males, to attract mates. Although all birds have fore-limbs adapted into wings, their hind limbs vary in purpose; depending upon the species, they can be used for walking, perching, swimming, or some combination. In lieu of typical jaws, birds’ jaws are modified into different shaped beaks, depending upon their diet. Birds can be a wide range of sizes – from a two inch tall hummingbird, to an ostrich that can reach heights of eight feet. This high level of variablity allows birds to occupy a wide variety of habitats.</p>
+			</div>
+				<div id='subbirds'>
+				<h3></h3>
+				</div>
+		</div>
 		<!--put your initial page content here-->
 			
 		<!--you can also use this space for internal scripts or stylesheets;
