All Heatmaps added; made menu sidebar
NOTE: MENU SIDBAR CAN BE MOVED/UPDATED

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<div id="panel"></div>
 		<div id="mapid"></div>
 		<div id="mydiv"></div>
+		<div id="controls"></div>
 		<div id="mapinfo">
 			<div id='amphibians'>
 			<h2>Amphibians</h2>
