added panelright to add hotspot information to

--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
 		<!--put your external stylesheet links here-->
 		<link rel="stylesheet" href="lib/leaflet.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link href="http://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Alegreya:700" rel="stylesheet" type="text/css" />
+
 		<!--[if IE<9]>
 			<link rel="stylesheet" href="css/style.ie.css">
 		<![endif]-->
 	</head>
 
 	<body>
-		
-		<div id="panel"></div>
+
+		<div id="panelleft"></div>
+		<div id="panelright"></div>
 		<div id="mapid"></div>
 		<div id="mydiv"></div>
 		<div id="controls"></div>
 		<div id="mapinfo">
+			<div id="biodiversity">
+				<h2>Biodiversity</h2>
+				<p></p>
+			</div>
 			<div id='amphibians'>
 			<h2>Amphibians</h2>
 			<p>Amphibians are ectothermic, or cold blooded, which means they regulate their body temperature behaviorally via the outside world. Amphibians are typically four-limbed vertebrates. They have smooth, unscaly, permeable skin that helps them absorb oxygen. Some amphibians even produce toxins using their skin glands to deter predators. Modern Amphibians are generally grouped as Caecilian (limbless amphibians), Caudata (salamanders) and, and Anura (frogs). As you can see from the map, amphibians as a whole occupy a large amount of the earth. Most amphibians live in or around aquatic ecosystems, as water is crucial to their reproduction. Most amphibians begin life in the water, and experience metamorphosis to move from an adolescent with gills to an adult that breathes air. Due to their close relationship with water, amphibians are typically good environmental indicators.</p>
@@ -44,7 +51,7 @@
 				</div>
 		</div>
 		<!--put your initial page content here-->
-			
+
 		<!--you can also use this space for internal scripts or stylesheets;
 		place these within <script> or <style> tags-->
 
