--- a/index.html
+++ b/index.html
@@ -32,13 +32,22 @@
 			<h2>Amphibians</h2>
 			<p>Amphibians are ectothermic, or cold blooded, which means they regulate their body temperature behaviorally via the outside world. Amphibians are typically four-limbed vertebrates. They have smooth, unscaly, permeable skin that helps them absorb oxygen. Some amphibians even produce toxins using their skin glands to deter predators. Modern Amphibians are generally grouped as Caecilian (limbless amphibians), Caudata (salamanders) and, and Anura (frogs). As you can see from the map, amphibians as a whole occupy a large amount of the earth. Most amphibians live in or around aquatic ecosystems, as water is crucial to their reproduction. Most amphibians begin life in the water, and experience metamorphosis to move from an adolescent with gills to an adult that breathes air. Due to their close relationship with water, amphibians are typically good environmental indicators.</p>
 			</div>
-				<div id='subamphibians'>
+				<div class='sub'>
 				<h3>Caecilian</h3>
 				<p>These amphibians are unlike others in that they are limbless. You probably have not encountered these, as they live underground and are not commonly seen. They can be as small as earthworms and can grow as large as 5 feet long. As you can see from the map they are mostly located in South and Central America. Their diet consists of earthworms and other small creatures that live underground. Like frogs, caecilians skin secretes chemicals to deter predators. They are adapted for burrowing, but some species also can swim (similarly to eels) in bodies of water. Caecilians are less affected by climate change than some of the other species of amphibian; however, those who live in regions where deforestation or massive landscape changes are taking place are feeling the effects of losing large portions of their habitat. This is especially concerning because some caecilians are specific to very small regions and therefore are extremely vulnerable to habitat loss.</p>
+				<div class='images'>
+					<img src="img/caecilian.jpg" alt="Caecilian Image" style="width:304px;height:228px;">
+				</div>
 				<h3>Anura</h3>
 				<p>Anura, more commonly referred to as frogs, are members of a group of short bodied amphibians that, in their adult form, lack a tail. As you can see from the map, frogs are widely distributed, but most species are located in tropical rainforests, such as the Amazon Rainforest. Due to their life cycle largely involving water, most species live in moist areas, but a few species have adapted to dry habitats. Frogs are extremely diverse, and make up more than 85% of living amphibians. Frogs normally lay their eggs in water, which then hatch into tadpoles and eventually metamorphize into adults. Adult frogs are typically carnivorous and eat small invertebrates, but some species are omnivorous. We generally call warty frogs toads, but this is based solely on informal naming, and many toads are very closely related to frogs. More than one third of frog species are considered to be threatened and over 120 species have become extinct since the 1980s. Frogs have had increasing malformations, and a fungal disease called chytridiomycosis has spread around the world - even frogs in quarantine are being afflicted by the fungus. </p>
+				<div class='images'>
+					<img src="img/anura.jpg" alt="Anura Image" style="width:304px;height:228px;">
+				</div>
 				<h3>Caudata</h3>
 				<p>Caudata are known more commonly as salamanders. They have slender bodies and short legs. Unlike other amphibians, salamanders have a tail in both their adolescent and adult forms. As you can see on the map, they are mostly found in the Northern Hemisphere. Like many other amphibians, salamanders. Although most salamanders are small, two species can reach up to 5 feet in length. They are also nocturnal. They live in or around water – only a few species are completely terrestrial in adulthood. Salamanders can regenerate lost limbs within a few weeks, which allows them greater survivability of predator attacks. Due to the chytrid fungus that afflicts amphibians and destruction of wetland habitats, populations have dramatically decreased over the last few years.</p>
+				<div class='images'>
+					<img src="img/caudata.jpg" alt="Caudata Image" style="width:304px;height:228px;">
+				</div>
 				<h3>Threatened Amphibians</h3>
 				<p>Although we are constantly discovering new amphibians, in the past 50 years we have been experiencing a rapid decline in amphibians, and scientists are not entirely sure why. Scientists have numerous ideas – acid rain, thinning ozone layer increasing UV radiation, toxic compounds in the air being absorbed via amphibians’ skins, and toxic fungus – but we still cannot be sure exactly what is happening, other than that many of these ideas result from human-caused climate change.</p>
 				</div>
@@ -46,7 +55,7 @@
 			<h2>Birds</h2>
 			<p>Birds are endothermic (warm-blooded) vertebrates whose defining characteristics are the presence of feathers and wings. Feathers are used as a barrier against the water, provide insulation from cold, provide a flat surface to push against the air during flight, and are used, especially by brightly colored males, to attract mates. Although all birds have fore-limbs adapted into wings, their hind limbs vary in purpose; depending upon the species, they can be used for walking, perching, swimming, or some combination. In lieu of typical jaws, birds’ jaws are modified into different shaped beaks, depending upon their diet. Birds can be a wide range of sizes – from a two inch tall hummingbird, to an ostrich that can reach heights of eight feet. This high level of variablity allows birds to occupy a wide variety of habitats.</p>
 			</div>
-				<div id='subbirds'>
+				<div class='sub'>
 				<h3>Psittaciformes</h3>
 				<p>Psittaciformes are parrots and related birds such as lorikeets, macaws, and cockatoos. They commonly have strong, curved beaks; strong legs; and clawed feet. They subsist off seeds, nuts, fruits, and other organic plant materials. Parrots are one of the most intelligent birds, and are popular pets, partially due to their ability to imitate human speech. However, because of parrots’ popularity as pets, habitat loss, and invasive species, wild parrot populations have diminished.</p>
 				<h3>Passeriformes</h3>
@@ -64,7 +73,7 @@
 			<h2>Mammals</h2>
 			<p>Mammals are endothermic, or warm blooded, vertebrates. To be classified as a mammal, the organism must also have hair on its body, and produce milk to feed its young. Most mammals live on land, but there are many that fly, or live in the ocean. Some species of mammals are intelligent and can use tools, or are self-aware. Mammals can communicate in several ways, but most communicate vocally. Humans are mammals, and have benefited from the domestication of other mammals, such as cows, dogs, and sheep (among others) which have allowed us to thrive on the earth. However, human effects on the climate and environment, such as poaching and deforestation, is the biggest threat to mammals. </p>
 			</div>
-				<div id='submammals'>
+				<div class='sub'>
 				<h3>Carnivora</h3>
 				<p>The order Carnivora are descendants of a group of Paleocene mammals who were carnivorous. However, this does not mean that all current members of Carnivora eat strictly meat. As they have evolved, Carnivorans still primarily eat meat, but now include other food sources as well, as many are omnivores. As you can see from the map, members of Carnivora are well distributed throughout the world. Species belonging to Carnivora can be identified by their teeth: they have large premolars, which are sharp and specialized for cutting through meat and tendons, as well as six incisors, which is how many their ancestors had as well. Many Carnivorans are the top predator in their ecosystem, therefore, they play an important role in regulating populations of their prey. Due to many members of Carnivora being nuisances or threats to human livelihood (example: wolves eat humans’ cows and sheep), they have been threatened by humans for a long time. Major threats to members of Carnivora include habitat loss, fragmentation, and degredation; hunting for sport and for profit; and reluctance of humans to coexist with carnivorans.</p>
 				<h3>Cetartiodactyla</h3>
