--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 		<!--put your external stylesheet links here-->
 		<link rel="stylesheet" href="lib/leaflet.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/styledLayerControl.css" />
 		<link href="http://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed|Alegreya:700" rel="stylesheet" type="text/css" />
 
-		<!--[if IE<9]>
-			<link rel="stylesheet" href="css/style.ie.css">
-		<![endif]-->
 	</head>
 
 	<body>
@@ -101,6 +99,7 @@
 		<script type="text/javascript" src="lib/jquery-3.1.1.js"></script>
 		<script type="text/javascript" src="lib/leaflet-src.js"></script>
 		<script type="text/javascript" src="lib/leaflet-providers-master/leaflet-providers.js"></script>
+		<script src="lib/styledLayerControl.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
