--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width">
 		<title>World Biodiversity Atlas</title>
 		<h1>World Biodiversity Atlas</h1>
+		<h6>Created by Sulong Zhou, Ben Segal, and Andrea Eibergen</h6>
 
 		<!--put your external stylesheet links here-->
 		<link rel="stylesheet" href="lib/leaflet.css">
@@ -27,8 +28,8 @@
 				<p>Biodiversity is considered the variability of species in a given area, or species richness. This map offers insight into the richness of numerous terrestrial classes and orders.</p>
 			</div>
 			<div id='amphibians'>
-			<h2>Amphibians</h2>
-			<p>Amphibians are ectothermic, or cold blooded, which means they regulate their body temperature behaviorally via the outside world. Amphibians are typically four-limbed vertebrates. They have smooth, unscaly, permeable skin that helps them absorb oxygen. Some amphibians even produce toxins using their skin glands to deter predators. Modern Amphibians are generally grouped as Caecilian (limbless amphibians), Caudata (salamanders) and, and Anura (frogs). As you can see from the map, amphibians as a whole occupy a large amount of the earth. Most amphibians live in or around aquatic ecosystems, as water is crucial to their reproduction. Most amphibians begin life in the water, and experience metamorphosis to move from an adolescent with gills to an adult that breathes air. Due to their close relationship with water, amphibians are typically good environmental indicators.</p>
+			<!-- <h2>Amphibians</h2>
+			<p>Amphibians are ectothermic, or cold blooded, which means they regulate their body temperature behaviorally via the outside world. Amphibians are typically four-limbed vertebrates. They have smooth, unscaly, permeable skin that helps them absorb oxygen. Some amphibians even produce toxins using their skin glands to deter predators. Modern Amphibians are generally grouped as Caecilian (limbless amphibians), Caudata (salamanders) and, and Anura (frogs). As you can see from the map, amphibians as a whole occupy a large amount of the earth. Most amphibians live in or around aquatic ecosystems, as water is crucial to their reproduction. Most amphibians begin life in the water, and experience metamorphosis to move from an adolescent with gills to an adult that breathes air. Due to their close relationship with water, amphibians are typically good environmental indicators.</p> -->
 			</div>
 				<div class='sub'>
 				<h3>Caecilian</h3>
@@ -99,7 +100,7 @@
 		<script type="text/javascript" src="lib/jquery-3.1.1.js"></script>
 		<script type="text/javascript" src="lib/leaflet-src.js"></script>
 		<script type="text/javascript" src="lib/leaflet-providers-master/leaflet-providers.js"></script>
-		<script src="lib/styledLayerControl.js"></script>
+		<script type="text/javascript" src="lib/styledLayerControl.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
